<resources>
    <string name="app_name">juan_ted_ui</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_past_taskers">Past Taskers</string>
    <string name="title_favorite_taskers">Favorite Taskers</string>
    <string name="title_settings">Settings</string>
    <string name="title_profile">Profile</string>
    <string name="title_messages">Messages</string>
    <string name="title_tasks">Tasks</string>
    <string name="title_request">Requests</string>

    <string name="title_activity_customer_dashboard">CustomerDashboardActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="api_key">AIzaSyA4wmpcfAbGvLMbBqcVCY6uPuI-m5KYEbs</string>
    <string name="title_mytaskers">My Taskers</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tasker_dashboard">MainActivity</string>
</resources>