<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_mytasker"
        android:icon="@drawable/ic_view_list"
        android:title="@string/title_past_taskers" />

    <item
        android:id="@+id/navigation_favoritetasker"
        android:icon="@drawable/ic_message"
        android:title="@string/title_favorite_taskers" />
    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/ic_message"
        android:title="@string/title_messages" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile" />
</menu>